<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7E03A9F4">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/ivMain"
            android:layout_width="50dp"
            android:layout_height="50sp"
            android:layout_marginLeft="150sp"
            android:layout_marginBottom="30sp"
            android:src="@drawable/hindi" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pat_ID"
            android:textStyle="bold"
            android:typeface="monospace" />


        <EditText
            android:id="@+id/inputPatientID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6"
            android:layout_marginTop="5sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pat_firstName"
            android:textStyle="bold"
            android:typeface="monospace"
            android:layout_marginTop="5sp"/>


        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:ems="10"
            android:inputType="text"
            android:maxLength="20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pat_lastName"
            android:textStyle="bold"
            android:typeface="monospace"
            android:layout_marginTop="5sp"/>


        <EditText
            android:id="@+id/inputLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:ems="10"
            android:inputType="text"
            android:maxLength="20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departmant"
            android:textStyle="bold"
            android:typeface="monospace"
            android:layout_marginTop="5sp"/>


        <Spinner
            android:id="@+id/inputDept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/deps"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_pat" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_" />


    </LinearLayout>

</LinearLayout>